# precommit_mccabe_complexity

./: .gitignore  .isort.cfg  .pre-commit-hooks.yml  LICENSE  Pipfile  README.md  makefile  pyproject.toml  setup.py
mccabe_complexity/: __init__.py  complexity_check.py
