[build-system]
requires = ["flit"]
build-backend = "flit.buildapi"

[tool.flit.metadata]
module = "mccabe_complexity"
author = "Chad"
author-email = "c@me.com"
classifiers = ["License :: OSI Approved :: MIT License"]
requires = ["flake8", "click"]

[tool.flit.scripts]
mccabe-complexity = 'mccabe_complexity.complexity_check:main'